@@ -57,6 +57,9 @@ UNRELEASED CHANGES
       text editors to match the file name and set up appropriate modes or 
       settings.  (Magnus Therning)
 
+    * Improved performance when integrating changes from a remote weave.  
+      (Goffredo Baroncelli)
+
   BUG FIXES:
 
     * SFTP can walk up to the root path without index errors. (Robert Collins)
